fix footer image on mobile, and add shadow

--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -1,6 +1,32 @@
 .container {
   width: 100%;
   position: relative;
+
+  .footer-image {
+    @include mobile {
+      margin-bottom: mobile-vw(24px);
+      position: relative;
+      aspect-ratio: 360 / 260;
+      width: 100%;
+      height: mobile-vw(260px);
+      margin-top: 100px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        bottom: -1px;
+        width: 100%;
+        height: mobile-vw(190px);
+        background: linear-gradient(
+          180deg,
+          rgba(255, 255, 255, 0) 30%,
+          rgba(0, 0, 0, 1) 80%
+        );
+        z-index: 1;
+        pointer-events: none;
+      }
+    }
+  }
 }
 
 .footer {
